feat(user): 닉네임 유효성 ê 검사 추가